resolve favicon issue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Meeting note for the Pomodoro Timer project meeting.">
-    <link rel="icon" href="images/favicon.png" type="image/png"> <!-- My favicon isn't working on safari -->
+    <link rel="icon" href="images/favicon.png" type="image/png">
     <title> Meeting Notes: Pomodoro Timer Project </title>
   </head>
   <body>
