--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="description" content="Meeting note for the Pomodoro Timer project meeting.">
     <link rel="icon" href="images/favicon.png" type="image/png">
     <title> Meeting Notes: Pomodoro Timer Project </title>
